@@ -1,3 +1,4 @@
+<!-- $Id$ !-->
 <h1>Installing LilyPond</h1>
 <p>
   When we have whetted your appetite for LilyPond, then this is the
@@ -119,7 +120,7 @@
   </tr>
 
   
-    <tr>
+  <tr>
     <td><p align="center"><img src="@IMAGES@slackware-logo.png"></p></td>
     <td>
       Slackware 
@@ -603,10 +604,10 @@
 
 <h3>RedHat-9</h3>
 
-LilyPond 1.8 and newer requires guile-1.6.4-8 or newer from <a
-href="ftp://ftp.redhat.com/pub/redhat/linux/rawhide/i386/RedHat/RPMS/">
-Rawhide</a>.
+LilyPond 1.8 and newer requires guile-1.6.4-8 or newer from
 
+<a href="ftp://ftp.redhat.com/pub/redhat/linux/rawhide/i386/RedHat/RPMS/">
+Rawhide</a>.
 
 
 <a name="mandrake-notes"></a>
